[package]
name = "quote"
version = "0.3.0-rc1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Dead simple quasi-quoting"
repository = "https://github.com/dtolnay/quote"
documentation = "https://dtolnay.github.io/quote/quote/"
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
