[package]
name = "quote-benchmark"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[lib]
proc-macro = true
path = "lib.rs"

[[bin]]
name = "quote-benchmark"
path = "main.rs"

[dependencies]
proc-macro2 = "1.0"
quote = { path = ".." }
termcolor = "1.1"
